# ScreenRecorder-pds

./: .gitignore  CMakeLists.txt  Project1.sln  README.md  ScreenRecorder.cpp  ScreenRecorder.h  build.sh  install_dependencies.sh  main.cpp
Project1/: Project1.vcxproj  Project1.vcxproj.filters  ScreenRecorder.cpp  ScreenRecorder.h  main.cpp
Project1/x64/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
media/: log.txt
